[package]
name = "yew-table"
version = "0.1.0"
authors = ["Alexis Luengas <alexis.luengas@gmail.com>"]
edition = "2018"
repository = "https://github.com/LexLuengas/yew-table"
homepage = "https://github.com/LexLuengas/yew-table"
documentation = "https://docs.rs/yew-table/"
license = "MIT/Apache-2.0"
readme = "README.adoc"
keywords = ["web", "wasm", "yew"]
categories = ["gui", "web-programming"]
description = "A table component for the Yew web framework"

[dependencies]
serde = "1"
serde_derive = "1"
smart-default = "0.5.2"
yew = { git = "https://github.com/DenisKolodin/yew", rev = "792a254acdc84b1419f2c2d6219e933ca7081c07" }
