[package]
name = "yew-table"
version = "0.1.1"
authors = ["Alexis Luengas <alexis.luengas@gmail.com>"]
edition = "2018"
repository = "https://github.com/LexLuengas/yew-table"
homepage = "https://github.com/LexLuengas/yew-table"
documentation = "https://docs.rs/yew-table/"
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["web", "wasm", "yew"]
categories = ["gui", "web-programming"]
description = "A table component for the Yew web framework"

[dependencies]
serde = "1"
serde_derive = "1"
smart-default = "0.5.2"
yew = "0.6.0"