[package]
name = "yew-app"
version = "0.1.0"
authors = ["Alexis Luengas <al096@hdm-stuttgart.de>"]
edition = "2018"

[dependencies]
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
web_logger = "0.1"
smart-default = "0.5.2"
serde_derive = "1.0.92"
serde = "1.0.92"
yew = "0.6.0"
yew-table = { path = "../.." }
strum = "0.15.0"
strum_macros = "0.15.0"

[dependencies.rand]
version = "0.6.5"
features = ["stdweb"]

[profile.release]
debug = true
