[package]
name = "yew-app"
version = "0.2.0"
authors = ["Alexis Luengas <alexis.luengas@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
wasm-logger = "0.2"
smart-default = "0.6.0"
serde = { version = "1.0.93", features = ["derive"] }
strum = "0.24.1"
strum_macros = "0.24.3"
serde-value = "0.7.0"
yew = { version = "0.20.0", features = ["csr"] }
yew-table = { path = "../.." }

[profile.release]
debug = true
